[gd_scene load_steps=4 format=2]

[ext_resource path="res://Scenes/Grid.gd" type="Script" id=1]
[ext_resource path="res://Assets/Audio/9CELL Opening.mp3" type="AudioStream" id=2]
[ext_resource path="res://Assets/Audio/9CELL MAIN.mp3" type="AudioStream" id=3]

[node name="Grid" type="Node2D"]
script = ExtResource( 1 )

[node name="GridUnitHolder" type="Node2D" parent="."]

[node name="MainLoop" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )

[node name="OpeningLoop" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 2 )
